--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/vuetify": "^1.11.0",
+    "chart.js": "^2.9.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "hchs-vue-charts": "^1.2.8",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
