--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^2.9.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "google-charts": "^2.0.0",
     "hchs-vue-charts": "^1.2.8",
     "nuxt": "^2.0.0"
   },
